# RustyTarantool

./: .gitignore  Cargo.toml  README.md  run_tests.sh
examples/: actix-tarantool-proxy.rs  hyper-tarantool-proxy.rs  simple-bench.rs  simple-call.rs  test-reconnect.rs
src/: lib.rs
src/tarantool/: codec.rs  dispatch.rs  mod.rs  packets.rs  tools.rs
test-tarantool/: countries.csv  countries.json  init-tarantool-docker.lua  init-tarantool-v2.lua  init-tarantool.lua
test-tarantool/db/wal/: wal.txt
tests/: test_service.rs  test_transport_call.rs
