[package]
name = "rusty_tarantool"
authors = ["Michael Zheludkov https://github.com/zheludkovm"]
description = "Tarantul async client based on tokio framework"
license = "Apache-2.0"
repository = "https://github.com/zheludkovm/RustyTarantool"
categories = ["asynchronous", "network-programming"]
keywords = ["asynchronous", "tarantool", "protocol" , "api"]
version = "0.2.8"
exclude = [
    "test-tarantool/*"
]
readme = "README.md"
edition = "2018"

[lib]
name = "rusty_tarantool"
path = "src/lib.rs"

[dependencies]
maplit = "1"
futures-core = "0.3"
futures-sink = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
futures = "0.3"
bytes = "0.5"
log = "0"
env_logger = "0"
byteorder = "1.3"

tokio = { version = "0.2", features = ["full"] }
tokio-util = {version = "0.3", features= ["codec"]}

serde = "1.0"
serde_derive = "1.0"
rmp = "0.8"
rmp-serde = "0.14"
rmp-serialize = "0.8"
rmpv = { version = "0.4", features = ["with-serde"] }
base64 = "0.12"
sha1 = "0.6"
rustc-serialize = "0.3"

[dev-dependencies]
actix-web = "2"
actix-rt = "1"
serde_json = "1.0"
hyper = "0.13"
url = "2"
