[package]
name = "rusty_tarantool"
authors = ["Michael Zheludkov https://github.com/zheludkovm"]
description = "Tarantul async client based on tokio framework"
license = "Apache-2.0"
repository = "https://github.com/zheludkovm/RustyTarantool"
categories = ["asynchronous", "network-programming"]
keywords = ["asynchronous", "tarantool", "protocol" , "api"]
version = "0.3.0"
exclude = [
    "test-tarantool/*"
]
readme = "README.md"
edition = "2018"

[lib]
name = "rusty_tarantool"
path = "src/lib.rs"

[dependencies]
maplit = "1"
futures-core = "0.3"
futures-sink = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
futures = "0.3"
bytes = "1.1"
log = "0"
env_logger = "0"
byteorder = "1.4"

tokio = { version = "1", features = ["full","time"] }
tokio-util = {version = "0.7", features= ["codec", "time"]}

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
rmp = "0.8"
rmp-serde = "1.1"
rmp-serialize = "0.8"
rmpv = { version = "1", features = ["with-serde"] }
base64 = "0.12"
sha1 = "0.10"
rustc-serialize = "0.3"

[dev-dependencies]
actix-web = "4"
actix-rt = "2.7.0"
serde_json = "1.0"
hyper =  { version = "0.14", features = ["full"] }
url = "2"
